// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateChain: index mapStateToProps with default state 1`] = `
Object {
  "initialValues": Object {
    "access": true,
    "commonName": "",
    "orgName": "",
    "orgUnit": "",
  },
  "isOpen": true,
}
`;

exports[`CreateChain: index render component (Oauth mode) form fields with values 1`] = `
Object {
  "access": true,
  "commonName": "",
  "errors": null,
  "form": Object {},
  "orgName": "",
  "orgUnit": "",
}
`;

exports[`CreateChain: index render component (Oauth mode) form fields with values 2`] = `
Object {
  "access": true,
  "commonName": "Engineering",
  "errors": null,
  "form": Object {},
  "orgName": "",
  "orgUnit": "BlockApps",
}
`;

exports[`CreateChain: index render component (Oauth mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"orgName\\" className=\\"form-width pt-input\\" placeholder=\\"Org Name\\" name=\\"orgName\\" component=\\"input\\" dir=\\"auto\\" title=\\"orgName\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Unit:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"orgUnit\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Org Unit\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Common Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"commonName\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Common Name\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Access
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={true} label=\\"Add\\" checked={true} onClick={[Function: onClick]} />
               Add
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={false} label=\\"Remove\\" checked={false} onClick={[Function: onClick]} />
               Remove
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (Oauth mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"orgName\\" className=\\"form-width pt-input\\" placeholder=\\"Org Name\\" name=\\"orgName\\" component=\\"input\\" dir=\\"auto\\" title=\\"orgName\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Unit:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"orgUnit\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Org Unit\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Common Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"commonName\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Common Name\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Access
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={true} label=\\"Add\\" checked={true} onClick={[Function: onClick]} />
               Add
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={false} label=\\"Remove\\" checked={false} onClick={[Function: onClick]} />
               Remove
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (non Oauth mode) errorMessageFor 1`] = `null`;

exports[`CreateChain: index render component (non Oauth mode) errorMessageFor 2`] = `null`;

exports[`CreateChain: index render component (non Oauth mode) form fields 1`] = `
Object {
  "access": true,
  "commonName": "",
  "errors": null,
  "form": Object {},
  "orgName": "",
  "orgUnit": "",
}
`;

exports[`CreateChain: index render component (non Oauth mode) form fields 2`] = `
Object {
  "access": true,
  "commonName": "Engineering",
  "errors": null,
  "form": Object {},
  "orgName": "",
  "orgUnit": "BlockApps",
}
`;

exports[`CreateChain: index render component (non Oauth mode) form fields 3`] = `
Object {
  "access": true,
  "commonName": "Engineering",
  "errors": null,
  "form": Object {},
  "orgName": "",
  "orgUnit": "BlockApps",
}
`;

exports[`CreateChain: index render component (non Oauth mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"orgName\\" className=\\"form-width pt-input\\" placeholder=\\"Org Name\\" name=\\"orgName\\" component=\\"input\\" dir=\\"auto\\" title=\\"orgName\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Unit:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"orgUnit\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Org Unit\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Common Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"commonName\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Common Name\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Access
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={true} label=\\"Add\\" checked={true} onClick={[Function: onClick]} />
               Add
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={false} label=\\"Remove\\" checked={false} onClick={[Function: onClick]} />
               Remove
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`CreateChain: index render component (non Oauth mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add Member\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add Member\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"orgName\\" className=\\"form-width pt-input\\" placeholder=\\"Org Name\\" name=\\"orgName\\" component=\\"input\\" dir=\\"auto\\" title=\\"orgName\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Org Unit:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"orgUnit\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Org Unit\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Common Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"commonName\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Common Name\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Access
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={true} label=\\"Add\\" checked={true} onClick={[Function: onClick]} />
               Add
              <Field style={{...}} name=\\"radio\\" component=\\"input\\" type=\\"radio\\" value={false} label=\\"Remove\\" checked={false} onClick={[Function: onClick]} />
               Remove
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add Member\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;
